debug: repair size of canvas & overflow

--- a/react/src/pages/3Dverse.scss
+++ b/react/src/pages/3Dverse.scss
@@ -1,4 +1,4 @@
-* #display-canvas-3Dverse {
-    height : '100vh';
-    width : '100vw';
+* body #display-canvas-3Dverse {
+    width : 1920px;
+    height : 1080px;
 }
